<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

    </LinearLayout>


    <TextView
        android:layout_width="413dp"
        android:layout_height="200dp"
        android:background="#6433BC"
        android:gravity="center"
        android:text="Event Tracker"
        android:textAlignment="center"
        android:textColor="#FBFAFA"
        android:textSize="40dp"
        android:textStyle="bold"
        android:typeface="normal"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="39dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="101dp"
        android:layout_height="85dp"
        android:outlineAmbientShadowColor="#FBF4F4"
        android:tint="#FFF9F9"
        app:srcCompat="@android:drawable/ic_menu_my_calendar"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="162dp" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="262dp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="337dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="311dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        tools:layout_editor_absoluteX="67dp"
        tools:text="@string/login" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="175dp"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="478dp"
        tools:text="@string/sign_up" />


</androidx.constraintlayout.widget.ConstraintLayout>